<resources>
    <string name="app_name">ByteWorksJobTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new">add new employee</string>
    <string name="user_placholder_image">placeholder Image</string>
    <string name="register_admin">Enter your details to register as an admin</string>
    <string name="rg_name">Enter your first name</string>
    <string name="enter_last_name">Enter your last name</string>
    <string name="enter_gender">Enter  your gender</string>
    <string name="enter_designation">Enter your job designation</string>
    <string name="enter_birth_date">Enter your date of birth</string>
    <string name="account_holder">Already a registred Admin? then just Login Here</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_country">Enter your country</string>
    <string name="enter_state">Enter state</string>
    <string name="save_employee">save employee</string>
    <string name="new_employee">Enter details to create new employee</string>
    <string name="enter_valid_input">Ensure you have entered Valid Inputs</string>
    <string name="new_employee_success">New Employee Created Successfully</string>
    <string name="new_account_success">New Admn Account Created Successfully</string>
    <string name="signin">Enter your admin details to Login</string>
    <string name="enter_first_name">Enter your firstname</string>
    <string name="login">Login</string>
    <string name="forgotpassword">o! you forgot your password! don\'t worry, enter your email and we\'ll send you a link to reset your password</string>
    <string name="create_new">Don\'t have an account? don\'t worry create one here</string>
    <string name="forgottenpassword">Forgotten your password? retrieve it here</string>
    <string name="retievemail">Enter your account email to reset password</string>
    <string name="sendreset">RESET</string>
    <string name="reset_email_sent">Reset Email Sent</string>
    <string name="correct_details">Ensure you have entered your correct details</string>
    <string name="firstname_error">Please enter your first name</string>
    <string name="lastname_error">Please enter your last name</string>
    <string name="create_admin">CREATE ADMIN ACCOUNT</string>
    <string name="choose_gender">Ensure you have selected your gender</string>
    <string name="select_image">Select Passport</string>
    <string name="choose_passport">Ensure to Choose Passport Photo</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter_password">Enter your password</string>
    <string name="open_camera">Open Camera</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="choose_image">Choose Image</string>
    <string name="de_first_name">FirstName :  </string>
    <string name="de_last_name">LastName :  </string>
    <string name="de_gender">Gender :  </string>
    <string name="de_designation">Designation :  </string>
    <string name="de_dob">Date of Birth :  </string>
    <string name="de_address">Address :  </string>
    <string name="de_country">Country :  </string>
    <string name="de_state">State :  </string>
    <string name="get_internet_connection">Ensure you have proper internet connection to complete this process</string>
    <string name="ensure_country_choosen">Ensure you choose a country from the Dropdown</string>
    <string name="ensure_state_choosen">Ensure you enter your state</string>
    <string name="gender">GENDER</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="spinner_select_country">Select Country</string>
    <string name="spinner_select_state">Select State</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date created</string>
    <string name="submit_birth_date">Submit birth date</string>
    <string name="cancel">Cancel</string>
</resources>